Выполнение домашнего задания 20-26, финализация проекта