@@ -1,6 +1,7 @@
 package by.slotify.core.service;
 
-import by.slotify.core.dto.ParticipationTypeDto;
+import by.slotify.core.dto.request.ParticipationTypeRequest;
+import by.slotify.core.dto.response.ParticipationTypeResponse;
 import by.slotify.core.entity.ParticipationType;
 import by.slotify.core.mapper.ParticipationTypeMapper;
 import by.slotify.core.repository.ParticipationTypeRepository;
@@ -10,44 +11,47 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
-@Transactional
 @RequiredArgsConstructor
 public class ParticipationTypeService {
     private final ParticipationTypeRepository participationTypeRepository;
     private final ParticipationTypeMapper participationTypeMapper;
 
-    public ParticipationTypeDto create(ParticipationTypeDto participationTypeDto) {
-        ParticipationType participationType = participationTypeMapper.toEntity(participationTypeDto);
+    @Transactional
+    public ParticipationTypeResponse create(ParticipationTypeRequest participationTypeRequest) {
+        ParticipationType participationType = participationTypeMapper.toEntity(participationTypeRequest);
         ParticipationType saved = participationTypeRepository.save(participationType);
-        return participationTypeMapper.toDto(saved);
+        return participationTypeMapper.toResponse(saved);
     }
 
-    public Optional<ParticipationTypeDto> findById(Integer id) {
+    @Transactional(readOnly = true)
+    public Optional<ParticipationTypeResponse> findById(Integer id) {
         return participationTypeRepository.findById(id)
-                .map(participationTypeMapper::toDto);
+                .map(participationTypeMapper::toResponse);
     }
 
-    public List<ParticipationTypeDto> findAll() {
+    @Transactional(readOnly = true)
+    public List<ParticipationTypeResponse> findAll() {
         return participationTypeRepository.findAll().stream()
-                .map(participationTypeMapper::toDto)
-                .collect(Collectors.toList());
+                .map(participationTypeMapper::toResponse)
+                .toList();
     }
 
-    public ParticipationTypeDto update(ParticipationTypeDto participationTypeDto) {
-        ParticipationType participationType = participationTypeMapper.toEntity(participationTypeDto);
+    @Transactional
+    public ParticipationTypeResponse update(Integer id, ParticipationTypeRequest participationTypeRequest) {
+        ParticipationType participationType = participationTypeRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("ParticipationType not found with id: " + id));
+        
+        participationType.setName(participationTypeRequest.getName());
+        participationType.setDescription(participationTypeRequest.getDescription());
+        
         ParticipationType saved = participationTypeRepository.save(participationType);
-        return participationTypeMapper.toDto(saved);
+        return participationTypeMapper.toResponse(saved);
     }
 
+    @Transactional
     public void deleteById(Integer id) {
         participationTypeRepository.deleteById(id);
-    }
-
-    public void delete(ParticipationTypeDto participationTypeDto) {
-        ParticipationType participationType = participationTypeMapper.toEntity(participationTypeDto);
-        participationTypeRepository.delete(participationType);
     }
 }
